[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enviroment/image (4).png" type="Texture" id=2]
[ext_resource path="res://main/Main.gd" type="Script" id=3]
[ext_resource path="res://Apple.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/fondo.ogg" type="AudioStream" id=5]
[ext_resource path="res://main/HUD.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/Roboto-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_color = Color( 0.898039, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 7 )

[node name="Main" type="Node"]
script = ExtResource( 3 )
Apple = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AppleContainer" type="Node" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 222.18, 472.798 )

[node name="GameTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 229.713, 467.382 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Label" type="Label" parent="."]
modulate = Color( 0.992157, 0.992157, 0.992157, 1 )
margin_left = 137.0
margin_top = 554.0
margin_right = 348.0
margin_bottom = 581.0
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 0.960784, 0.0509804, 0.0745098, 1 )
custom_colors/font_outline_modulate = Color( 0.94902, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 1, 0.0823529, 0.0823529, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 3 )
text = "Angie Mina Ishuiza"
uppercase = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="ScoreLabel" type="Label" parent="HUD"]
modulate = Color( 0.94902, 0.0823529, 0.0823529, 1 )
margin_left = 10.0
margin_top = 17.0
margin_right = 113.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )

[node name="MessageLabel" type="Label" parent="HUD"]
visible = false
modulate = Color( 0.12549, 0.698039, 0.0313726, 1 )
margin_left = 10.0
margin_top = 293.0
margin_right = 430.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 1 )

[node name="RestartButton" type="Button" parent="HUD"]
visible = false
margin_left = 327.0
margin_top = 13.0
margin_right = 425.0
margin_bottom = 41.0
custom_colors/icon_color_pressed = Color( 0.980392, 0.92549, 0.92549, 1 )
text = "RESET"

[connection signal="pressed" from="HUD/RestartButton" to="HUD" method="_on_RestartButton_pressed"]
